--- a/index.html
+++ b/index.html
@@ -350,27 +350,27 @@
                     <ul>
                       <h6>
                         <li>
-                          <a href="#customitem">Custom Item</a>
+                          <a href="#customitem">Item</a>
                         </li>
                       </h6>
                       <h6>
                         <li>
-                          <a href="#customitemicon">Custom Icons (Item & Item Revision)</a>
+                          <a href="#customitemicon">Icons (Item & Item Revision)</a>
                         </li>
                       </h6>
                       <h6>
                         <li>
-                          <a href="#customproperties">Custom Properties</a>
+                          <a href="#customproperties">Properties</a>
                         </li>
                       </h6>
                       <h6>
                         <li>
-                          <a href="#customform">Custom Form</a>
+                          <a href="#customform">Form</a>
                         </li>
                       </h6>
                       <h6>
                         <li>
-                          <a href="#customdataset">Custom Dataset</a>
+                          <a href="#customdataset">Dataset</a>
                         </li>
                       </h6>
                     </ul>
@@ -384,22 +384,27 @@
                     <ul>
                       <h6>
                         <li>
-                          <a href="#customtool">Custom Tool</a>
+                          <a href="#customtool">Tool</a>
                         </li>
                       </h6>
                       <h6>
                         <li>
-                          <a href="#customrelation">Custom Relation</a>
+                          <a href="#customrelation">Relation</a>
                         </li>
                       </h6>
                       <h6>
                         <li>
-                          <a href="#customnote">Custom Note</a>
+                          <a href="#customnote">Note</a>
                         </li>
                       </h6>
                       <h6>
                         <li>
-                          <a href="#customuom">Custom Unit of Measure</a>
+                          <a href="#customuom">Unit of Measure</a>
+                        </li>
+                      </h6>
+                      <h6>
+                        <li>
+                          <a href="#customnamingrule">Naming Rule - Item ID</a>
                         </li>
                       </h6>
                     </ul>
@@ -422,7 +427,7 @@
                 </div>
                 <div class="bg-light p-3" id="customitem">
                   <div class="container">
-                    <h5>BMIDE - Custom Item</h5>
+                    <h5>Custom Item</h5>
                     <div class="row">
                       <div class="col-sm">
                         <li>Custom item creation and depoyment using BMIDE</li>
@@ -452,7 +457,7 @@
                 <div class="container-narrow">
                   <div class="bg-light p-3" id="customitemicon">
                     <div class="container">
-                      <h5>BMIDE - Custom Icons</h5>
+                      <h5>Custom Icons</h5>
                       <div class="row">
                         <div class="col-sm">
                           <li>Custom icons for item and item revision</li>
@@ -477,7 +482,7 @@
                   <br>
                   <div class="bg-light p-3" id="customproperties">
                     <div class="container">
-                      <h5>BMIDE - Custom Properties</h5>
+                      <h5>Custom Properties</h5>
                       <div class="row">
                         <div class="col-sm">
                           <li>Custom properties on item revision</li>
@@ -509,7 +514,7 @@
                   <div class="container-narrow">
                     <div class="bg-light p-3" id="customform">
                       <div class="container">
-                        <h5>BMIDE - Custom Form</h5>
+                        <h5>Custom Form</h5>
                         <div class="row">
                           <div class="col-sm">
                             <li>Custom form for the custom item</li>
@@ -539,7 +544,7 @@
                     <div class="container-narrow">
                       <div class="bg-light p-3" id="customdataset">
                         <div class="container">
-                          <h5>BMIDE - Custom Dataset</h5>
+                          <h5>Custom Dataset</h5>
                           <div class="row">
                             <div class="col-sm">
                               <li>Custom dataset for the custom item</li>
@@ -566,7 +571,7 @@
                       <div class="container-narrow">
                         <div class="bg-light p-3" id="customtool">
                           <div class="container">
-                            <h5>BMIDE - Custom Tool</h5>
+                            <h5>Custom Tool</h5>
                             <div class="row">
                               <div class="col-sm">
                                 <li>Custom tool for the custom item</li>
@@ -594,7 +599,7 @@
                       <div class="container-narrow">
                         <div class="bg-light p-3" id="customrelation">
                           <div class="container">
-                            <h5>BMIDE - Custom Relation</h5>
+                            <h5>Custom Relation</h5>
                             <div class="row">
                               <div class="col-sm">
                                 <li>Custom relation for the custom item</li>
@@ -621,7 +626,7 @@
                         <div class="container-narrow">
                           <div class="bg-light p-3" id="customnote">
                             <div class="container">
-                              <h5>BMIDE - Custom Note</h5>
+                              <h5>Custom Note</h5>
                               <div class="row">
                                 <div class="col-sm">
                                   <li>Custom note</li>
@@ -649,7 +654,7 @@
                         <div class="container-narrow">
                           <div class="bg-light p-3" id="customuom">
                             <div class="container">
-                              <h5>BMIDE - Custom Unit of Measure</h5>
+                              <h5>Custom Unit of Measure</h5>
                               <div class="row">
                                 <div class="col-sm">
                                   <li>Custom unit of measure</li>
@@ -665,6 +670,34 @@
                                   <div class="col-sm">
                                     <div class="iframe-container">
                                       <iframe width="560" height="315" src="https://www.youtube.com/embed/vhSCEGSOpSs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                                    </div>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                        <br>
+                        <br>
+                        <div class="container-narrow">
+                          <div class="bg-light p-3" id="customnamingrule">
+                            <div class="container">
+                              <h5>Custom Naming Rule - Item ID</h5>
+                              <div class="row">
+                                <div class="col-sm">
+                                  <li>Custom Item ID specific to Engineering group and Designer role</li>
+                                </div>
+                              </div>
+                              <br>
+                              <div class="container">
+                                <div class="row">
+                                  <div class="col-sm">
+                                    <img src="images/Teamcenter/BMIDE/Custom_NamingRule.png" class="img-fluid">
+                                    <figcaption>Custom Item ID</figcaption>
+                                  </div>
+                                  <div class="col-sm">
+                                    <div class="iframe-container">
+                                      <iframe width="560" height="315" src="https://www.youtube.com/embed/uWuLi3gnW_s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                                     </div>
                                   </div>
                                 </div>
