--- a/index.html
+++ b/index.html
@@ -1017,7 +1017,7 @@
                           <br>
                           <div class="container">
                             <div class="row">
-                              <div class="col-sm">undefinedundefined<img src="images/Templates/Custom Templates.png" class="img-fluid">undefinedundefined<figcaption>Custom Templates</figcaption>undefinedundefined</div>
+                              <div class="col-sm"><img src="images/Templates/Custom Templates.png" class="img-fluid"><figcaption>Custom Templates</figcaption></div>
                             </div>
                           </div>
                         </div>
@@ -1026,17 +1026,17 @@
                       <div class="bg-light p-3" id="nxopen-highlightobjects">
                         <div class="container">
                           <h5>NX Open - Highlight Objects</h5>
-                          <div class="row">undefinedundefined<div class="col-sm">undefinedundefined<li>NX Open program using undefinedundefined<b>Windows Form</b> and undefinedundefined<b>Block Styler UI</b> to highlight objects of typeundefinedundefined</li>undefinedundefined<ul>undefinedundefined<li>Edges</li>undefinedundefined<li>Faces</li>undefinedundefined<li>Bodies</li>undefinedundefined</ul>undefinedundefined</div>undefinedundefined<div class="col-sm">undefinedundefined<div class="iframe-container">undefinedundefined<iframe width="560" height="315" src="https://www.youtube.com/embed/KbPMrhhuiTI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>undefinedundefined</div>undefinedundefined</div>
+                          <div class="row"><div class="col-sm"><li>NX Open program using <b>Windows Form</b> and <b>Block Styler UI</b> to highlight objects of type</li><ul><li>Edges</li><li>Faces</li><li>Bodies</li></ul></div><div class="col-sm"><div class="iframe-container"><iframe width="560" height="315" src="https://www.youtube.com/embed/KbPMrhhuiTI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div></div>
                           </div>
-                          <div class="container">undefinedundefined<div class="row">undefinedundefined<div class="col-sm">undefinedundefined<img src="images/NXOpen/Highlight Objects.png" class="img-fluid">undefinedundefined<figcaption>Highlight Objects (Windows Form and Block UI Styler)</figcaption>undefinedundefined</div>undefinedundefined</div>undefinedundefined</div>
+                          <div class="container"><div class="row"><div class="col-sm"><img src="images/NXOpen/Highlight Objects.png" class="img-fluid"><figcaption>Highlight Objects (Windows Form and Block UI Styler)</figcaption></div></div></div>
                         </div>
                         <br>
                       </div>
-                      <br>undefinedundefined<footer class="pt-4 pb-4 text-center bg-light">undefinedundefined<div class="container">undefinedundefined<div class="my-3">undefinedundefined<div class="h4">Ganesh Kadole</div>undefinedundefined<p>Applications Engineer (Teamcenter NX, Cloud ) at Siemens</p>undefinedundefined<div class="social-nav">undefinedundefined<nav role="navigation">undefinedundefined<ul class="nav justify-content-center">undefinedundefined<li class="nav-item">undefinedundefined<a class="nav-link" href="https://www.linkedin.com/in/ganeshkadole/" target="_blank" title="LinkedIn">undefinedundefined<i class="fab fa-linkedin fa-2x" style='color:#0072b1'></i>undefinedundefined<span class="menu-title sr-only">LinkedIn</span>undefinedundefined</a>undefinedundefined</li>undefinedundefined<li class="nav-item">undefinedundefined<a class="nav-link" href="https://community.sw.siemens.com/s/profile/0054O000007xnlc" target="_blank" title="Community">undefinedundefined<i class="fas fa-users fa-2x" style='color:#000000'></i>undefinedundefined<span class="menu-title sr-only">Siemens Community</span>undefinedundefined</a>undefinedundefined</li>undefinedundefined</ul>undefinedundefined</nav>undefinedundefined</div>undefinedundefined</div>undefinedundefined<div class="text-small text-secondary">undefined undefined
-                            <!-- <div class="mb-1">&copy; Ganesh Kadole. All rights reserved.</div> -->undefinedundefined<div>undefined undefined
-                              <!-- Make sure to buy a license for the template before removing the line below. Buy license on https://templateflip.com/ -->Design - undefinedundefined<a href="https://templateflip.com/" target="_blank">TemplateFlip</a>undefined undefined
-                            </div>undefined undefined
-                          </div>undefinedundefined</div>undefinedundefined</footer>
+                      <br><footer class="pt-4 pb-4 text-center bg-light"><div class="container"><div class="my-3"><div class="h4">Ganesh Kadole</div><p>Applications Engineer (Teamcenter NX, Cloud ) at Siemens</p><div class="social-nav"><nav role="navigation"><ul class="nav justify-content-center"><li class="nav-item"><a class="nav-link" href="https://www.linkedin.com/in/ganeshkadole/" target="_blank" title="LinkedIn"><i class="fab fa-linkedin fa-2x" style='color:#0072b1'></i><span class="menu-title sr-only">LinkedIn</span></a></li><li class="nav-item"><a class="nav-link" href="https://community.sw.siemens.com/s/profile/0054O000007xnlc" target="_blank" title="Community"><i class="fas fa-users fa-2x" style='color:#000000'></i><span class="menu-title sr-only">Siemens Community</span></a></li></ul></nav></div></div><div class="text-small text-secondary"> 
+                            <!-- <div class="mb-1">&copy; Ganesh Kadole. All rights reserved.</div> --><div> 
+                              <!-- Make sure to buy a license for the template before removing the line below. Buy license on https://templateflip.com/ -->Design - <a href="https://templateflip.com/" target="_blank">TemplateFlip</a> 
+                            </div> 
+                          </div></div></footer>
                     </div>
                   </div>
                   <!-- <div id="scrolltop"><a class="btn btn-secondary" href="#top"><span class="icon"><i class="fas fa-angle-up fa-x"></i></span></a></div> -->
