--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
         <div class="section px-2 px-lg-4 pt-5" id="community">
           <div class="container-narrow">
             <div class="text-center mb-5">
-              <h2 class="marker marker-center">Community of Practice </h2>
+              <h2 class="marker marker-center">Community of Practice (Ganesh) </h2>
             </div>
             <h5 style="text-align:center;">A community of practice is a group of people who "share a concern or a passion for something they do and learn how to do it better as they interact regularly."</h5>
             <br>
@@ -231,7 +231,7 @@
                     <th scope="row">2</th>
                     <td>
                       <a href="https://community.sw.siemens.com/s/topic/0TO4O000000cZK1WAM/xcelerator-share" target="_blank">
-                        <b>Xcelerator Share</b>
+                        <b>Siemens Xcelerator Share</b>
                       </a>
                     </td>
                     <td>1st among Top Knowledgeable People</td>
