--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                     <div class="pb-1">Age:</div>
                   </div>
                   <div class="col-sm-10">
-                    <div class="pb-1 fw-bolder">33</div>
+                    <div class="pb-1 fw-bolder">35</div>
                   </div>
                   <div class="col-sm-2">
                     <div class="pb-1">Email:</div>
@@ -231,7 +231,7 @@
                     <th scope="row">2</th>
                     <td>
                       <a href="https://community.sw.siemens.com/s/topic/0TO4O000000cZK1WAM/xcelerator-share" target="_blank">
-                        <b>Siemens Xcelerator Share</b>
+                        <b>Siemens Xcelerator Share (Teamcenter Share)</b>
                       </a>
                     </td>
                     <td>1st among Top Knowledgeable People</td>
@@ -266,7 +266,7 @@
                       </a>
                     </td>
                     <td>Manager</td>
-                    <td>12000+</td>
+                    <td>12500+</td>
                   </tr>
                   <tr>
                     <th scope="row">2</th>
@@ -281,7 +281,7 @@
                         <span class="menu-title sr-only">LinkedIn</span>
                     </td>
                     <td>Owner</td>
-                    <td>11800+</td>
+                    <td>12200+</td>
                   </tr>
                   <tr>
                     <th scope="row">3</th>
@@ -297,7 +297,7 @@
                       </a>
                     </td>
                     <td>Owner</td>
-                    <td>13100+</td>
+                    <td>13800+</td>
                   </tr>
                   <tr>
                     <th scope="row">4</th>
@@ -313,7 +313,7 @@
                       </a>
                     </td>
                     <td>Manager</td>
-                    <td>29500+</td>
+                    <td>29700+</td>
                   </tr>
                   <tr>
                     <th scope="row">5</th>
@@ -328,7 +328,7 @@
                         <span class="menu-title sr-only">LinkedIn</span>
                     </td>
                     <td>Owner</td>
-                    <td>100+</td>
+                    <td>190+</td>
                   </tr>
                 </tbody>
               </table>
