--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
         <div class="section px-2 px-lg-4 pt-5" id="community">
           <div class="container-narrow">
             <div class="text-center mb-5">
-              <h2 class="marker marker-center">Community of Practice (Ganesh) </h2>
+              <h2 class="marker marker-center">Community of Practice</h2>
             </div>
             <h5 style="text-align:center;">A community of practice is a group of people who "share a concern or a passion for something they do and learn how to do it better as they interact regularly."</h5>
             <br>
