--- a/index.html
+++ b/index.html
@@ -110,12 +110,12 @@
                   <div class="col-sm-10">
                     <div class="pb-1 fw-bolder">kadoleg@gmail.com</div>
                   </div>
-                  <div class="col-sm-2">
+                  <!-- <div class="col-sm-2">
                     <div class="pb-1">Mobile:</div>
                   </div>
                   <div class="col-sm-10">
                     <div class="pb-1 fw-bolder">+91 9028000143 / 9970604030</div>
-                  </div>
+                  </div> -->
                   <div class="col-sm-2">
                     <div class="pb-1">Location:</div>
                   </div>
